# gem

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
examples/: draw-png.rs
src/: alpha.rs  gray.rs  internal.rs  lib.rs  math.rs  prelude.rs  rgb.rs  scalar.rs
src/alpha/: has_alpha.rs  with_alpha.rs
src/gray/: has_gray.rs  with_gray.rs
src/internal/: math.rs  scalar.rs
src/internal/math/: impl_fallback.rs
src/math/: impl_libm.rs  impl_std.rs
src/rgb/: formats.rs  has_blue.rs  has_green.rs  has_red.rs  impl_rgb_alpha_wrappers.rs  impl_rgba.rs  macros.rs  traits.rs  with_blue.rs  with_green.rs  with_red.rs
src/rgb/formats/: abgr_8888.rs  argb_1555.rs  argb_4444.rs  argb_8888.rs  bgr_888.rs  rgb_565.rs  rgb_888.rs  rgb_f32.rs  rgba_f32.rs
src/rgb/macros/: impl_rgb_packed.rs  impl_rgb_with_fields.rs  impl_with_alpha_packed.rs
src/rgb/traits/: has_blue.rs  has_green.rs  has_red.rs  rgb_color.rs  rgba_color.rs
src/scalar/: intensity.rs  normalize.rs
