[package]
name = "gem"
edition = "2024"
license = "MIT"

description = "Color representations and conversions"
repository = "https://github.com/crates-lurey-io/gem"
version = "0.1.0"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[features]
default = ["libm", "libm-arch"]
std = []
libm = ["dep:libm"]
libm-arch = ["libm/arch"]

unstable-scalar = []

[dependencies]
libm = { version = "0.2.15", optional = true, default-features = false }
